        properties are no longer static. A createClassLoader() method
        was added as well as a static getResource(String) : URL one. 
        Reported by Bruno Harbulot.
      - Deprecated WedlResource. Use WadlServerResource instead.        
      - Added get/setRouter methods and deprecated getSpringBeanRouter
        in the SpringBeanFinder class. Reported by Thierry Templier.
    - Bugs fixed
      - Fixed character encoding issues (XStream, Jackson, JAXB, etc.)
      - Adjusted Jackson configuration as it was automatically closing 
        the target stream/writer, not respecting the 
        Representation#write() contract.
      - XStream detection of annotations was only working for JSON, not
        for XML representations. Reported by George Calm.
      - Conversion of empty entities to Form instances.
        Reported by Jean-Baptiste Dusseaut.
      - Fixed implementation of JaasVerifier to provide the User and 
        Roles principals to the JAAS Subject before login and to retrieve
        the User if no one exist and a principal user classname is 
        provided. Contributed by Bruno Harbulot.
      - Fixed bug preventing MessageBodyReader/Writer implementors 
        from being recognized as providers. 
        Contributed by Martin Krasser.
      - Fixed constructor DigestAuthenticator(Context,String,String)
        to properly take into account the "serverKey" parameter.
        Reported by Yang Xudong.
      - Fixed support of inherited annotated methods by ServerResource. 
        Reported by Kevin Pauli.
      - Fixed potential NPE in HttpBasicHelper.
        Reported by Myriam Leggieri        
      - Fixed potential NPE in SpringBeanFinder#getContext() and
        Reported by Thierry Templier.
      - Fixed HttpClient client connector for the Android extension.
      - Fixed conversion bug with annotated methods returning void.
        Reported by Pierre-Yves Ricau.       