@@ -41,7 +41,6 @@ import org.restlet.data.ChallengeRequest;
 import org.restlet.data.CookieSetting;
 import org.restlet.data.Dimension;
 import org.restlet.data.Method;
-import org.restlet.data.Protocol;
 import org.restlet.data.Reference;
 import org.restlet.data.ServerInfo;
 import org.restlet.data.Status;
@@ -789,15 +788,6 @@ public class Response extends Message {
      * @return A synthesis of the response like an HTTP status line.
      */
     public String toString() {
-        Protocol protocol = getRequest().getProtocol();
-
-        return ((protocol == null) ? "null"
-                : (protocol.getName() + "/" + protocol.getVersion()))
-                + " "
-                + ((getStatus() == null) ? "null" : String.valueOf(getStatus()
-                        .getCode())
-                        + " "
-                        + ((getStatus() == null) ? "null" : String
-                                .valueOf(getStatus().getDescription())));
+        return getRequest().getProtocol() + " - " + getStatus();
     }
 }
