@@ -97,7 +97,7 @@ public class ServerAdapter extends Adapter {
                 response.getHttpCall().setStatusCode(
                         response.getStatus().getCode());
                 response.getHttpCall().setReasonPhrase(
-                        response.getStatus().getDescription());
+                        response.getStatus().getName());
             }
         } catch (Exception e) {
             getLogger().log(Level.INFO,
@@ -106,7 +106,7 @@ public class ServerAdapter extends Adapter {
             response.getHttpCall().setStatusCode(
                     Status.SERVER_ERROR_INTERNAL.getCode());
             response.getHttpCall().setReasonPhrase(
-                    Status.SERVER_ERROR_INTERNAL.getDescription());
+                    Status.SERVER_ERROR_INTERNAL.getName());
         }
     }
 
